Correct Post-migration Defects (#89)
* Pointer curser links within tabber on medium

* Prevent button overflowing between 360px - 400px

* Prevent large empty space after last card on small

* Re-implement hiring console log

* Fix padding for blog

* Update blog icon font weight

--- a/version_control/Codurance_September2020/css/modules/webinar.css
+++ b/version_control/Codurance_September2020/css/modules/webinar.css
@@ -242,6 +242,5 @@
     margin-left: auto;
     margin-right: auto;
     max-width: var(--button-max-width);
-    width: 100%;
   }
 {% endcall %}
