--- a/version_control/Codurance_September2020/css/pages/blog-post.css
+++ b/version_control/Codurance_September2020/css/pages/blog-post.css
@@ -7,8 +7,8 @@
   margin-left: auto;
   margin-right: auto;
   max-width: var(--base-max-width) !important;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .blog-post__title {
@@ -150,6 +150,7 @@
   color: var(--shark);
   display: flex;
   font-size: 1rem;
+  font-weight: var(--light-font-weight);
   height: 2.3rem;
   justify-content: center;
   padding: 0.3rem;
